# realtime-api-workshop

00-minimal-web-rtc-demo/: gpt4_webrtc_demo.ipynb  gpt4o_webrtc_demo.html  requirements.txt
04-web-rtc-minimal-app/: main.py  pyproject.toml  realtime_client.py
04-web-rtc-minimal-app/webrtc_chainlit_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
